--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -25,7 +25,7 @@
 
     <script>
       let js = 'amazing';
-      if (js === )
+      if (js === 'amazing') alert('JavaScript is FUN!')
     </script>
   </head>
   <body>
