--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -25,9 +25,10 @@
 
   </head>
   <body>
-    <h1>JavaScript Fundamentals – Part 1</h1>
+    <h1>Assignment</h1>
 
     <script src="script.js"></script>
+    <script src="assignment.js"></script>
   </body>
 </html>
  
